- Added __builtin_expect (does nothing for now)
- Fixed some symbol resolution issues for functions called via pointers
- Fixed incorrect string comparisons in C library
- Fixed incorrect type inference in Spin functions which contain cases
- Fixed an uninitialized variable problem with some large programs
- Made sure case_fast actually does produce a jump table
- Made -2b the default P2 hardware instead of -2a.

Version 4.0.2
- Fixed Spin quit inside of case
- Optimized sequences of jumps (such as produced by case)
- Fixed floating point comparison bug
- Fixed missing declaration of _basic_print_integer internally

Version 4.0.1
- Added initialization of local arrays and structs in C
- Fixed a static name declaration bug in C
- Fixed floating point output of printf to match standard C

Version 4.0.0
- Fixed in-function array declarations in BASIC
- Fixed using constant members in const declarations in BASIC
- Use printf for translating BASIC print statements
- Allow underscore after decimal point in floating point numbers
- Support ptra++ and --ptra operands in inline assembly
- Revised how CLKMODE and CLKFREQ are handled; made them functions rather than variables and changed some internal code for better compatibility
- Fixed a bug in redefinition of special built-in functions
- Fixed a spurious "Out of memory" message when allocating 0 bytes
- Added -x flag to fastspin to output magic exit code for C programs
- Fixed promotion to unsigned when one operator is unsigned
- Added VAL and VAL% to BASIC
- Fixed a number of small C bugs

Version 3.9.33
- Fixed a bug in encoding wrlut and rdlut instructions in rev 2a
- Fixed wrpin_ functions in Spin (affects P2 SmartSerial object)

Version 3.9.32
- Improved handling of hub addresses in Spin objects
- Fixed some errors in C propeller2.h file
- Fixed lmm=trace
- Fixed C99 for loop declarations
- Allow selection of P2 silicon version via "-2a" or "-2b" flags; for now just plain "-2" selects rev A (original silicon)